--- a/styles/style.css
+++ b/styles/style.css
@@ -189,6 +189,109 @@
     margin-top: 19px;
 }
 
+.choos_title {
+    font-size: 20px;
+    font-weight: 600;
+    color: white;
+}
+
+.choos_text {
+    color: #fff8f6;
+    font-size: 18px;
+    margin-top: 40px;
+}
+
+.choos_content {
+    display: grid;
+    grid-template-columns: 385px 370px 385px;
+    align-items: center;
+    grid-gap: 30px;
+    color: white;
+    margin-top: 72px;
+}
+
+.choos_text-block:nth-of-type(1) {
+    grid-column: 1 / span 1;
+}
+
+.choos_text-block:nth-of-type(2) {
+    grid-column: 3 / span 1;
+}
+
+.choos_block-left {
+    padding: 0 24px;
+    margin-bottom: 74px;
+    text-align: right;
+}
+
+.choos_block-right {
+    padding: 0 24px;
+    margin-bottom: 74px;
+    text-align: right;
+    text-align: left;
+}
+
+.choos_content-name {
+    font-size: 20px;
+    color: white;
+}
+
+.choos_content-text {
+    font-size: 18px;
+    color: white;
+    grid-column: 1;
+    line-height: 21px;
+}
+
+.choose_img {
+    grid-column: 2 / span 1;
+    justify-self: center;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+@media (max-width: 1200px) {
+    .choos_content {
+        display: block;
+        margin-top: 30px;
+    }
+
+    .choos_text-block:nth-of-type(1),
+    .choos_text-block:nth-of-type(2) {
+        grid-column: unset;
+    }
+
+    .choos_block-left,
+    .choos_block-right {
+        padding: 0 10px;
+        margin-bottom: 40px;
+        text-align: center;
+    }
+
+    .choose_img {
+        grid-column: unset;
+        margin-bottom: 30px;
+        justify-self: center;
+    }
+}
+
 @media screen and (max-width: 1050px) {
     .features_info {
         justify-content: center;
