--- a/styles/style.css
+++ b/styles/style.css
@@ -1,3 +1,12 @@
+@font-face {
+    font-family: 'Myriad Pro';
+    src: url('../fonts/MYRIADPRO-REGULAR.OTF') format('opentype');
+}
+
+body {
+    font-family: 'Myriad Pro', Arial, sans-serif;
+}
+
 .header {
     background-image: url(../assets/background.png);
     background-position: center;
@@ -19,6 +28,19 @@
 
 .menu {
     color: white;
+}
+
+.hamburger-menu {
+    display: none;
+}
+
+.hamburger {
+    width: 30px;
+    height: 30px;
+}
+
+.show_menu {
+    display: block;
 }
 
 .menu_link {
@@ -92,6 +114,13 @@
     text-align: center;
     clip-path: polygon(0% 0%, 100% 50px, 100% 100%, 0% calc(100% - 50px));
     padding: 75px 0 155px;
+}
+
+.section_white {
+    position: relative;
+    background-color: white;
+    text-align: center;
+    padding: 75px 0;
 }
 
 .section_content {
@@ -249,54 +278,270 @@
 }
 
 
-
+.slider_title {
+    font-size: 47px;
+    color: #4b4b4b;
+    text-align: center;
+}
 
 .slider_content {
     display: flex;
     justify-content: center;
     align-items: center;
+    margin-top: 74px;
 }
 
 .slider {
     position: relative;
     width: 900px;
     overflow: hidden;
-  }
-  
-  .slides {
+}
+
+.slides {
     display: flex;
     transition: transform 0.5s ease;
-    width: 300px; 
-  }
-  
-  .slide {
-    flex: 0 0 300px; /* Ширина одного слайда */
-  }
-  
-  
+    width: 300px;
+}
 
+.slide {
+    flex: 0 0 300px;
+}
 
+.slider_img {
+    width: 260px;
+    height: 560px;
+}
 
+.video_title {
+    font-size: 47px;
+    color: white;
+}
 
+.video_img {
+    margin-top: 91px;
+    width: 770px;
+    height: 440px;
+    padding: 0 8px;
+}
 
+.downUpdate {
+    font-size: 47px;
+    color: #4b4b4b;
+}
 
+.downUpdate_info {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+}
 
+.downUpdate_button-block {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    flex-wrap: wrap;
+    margin-right: 65px;
+}
 
+.downUpdate_button {
+    border-radius: 50%;
+    width: 180px;
+    border: none;
+    padding: 36px;
+    margin: 0 18px;
+    color: white;
+    font-size: 18px;
+    display: grid;
+    justify-content: center;
+}
 
+.downUpdate_button:nth-child(1) {
+    background-color: #a5c63b;
+}
 
+.downUpdate_button:nth-child(2) {
+    background-color: #009ddc;
+}
 
+.downUpdate_button:nth-child(3) {
+    background-color: #f8682c;
+}
 
+.downUpdate_icon {
+    width: 40px;
+    height: 40px;
+    margin: 0 auto;
+}
 
+.downUpdate_text-title {
+    margin-top: 15px;
+}
 
+.downUpdate_text {
+    margin-top: 12px;
+}
 
+.downUpdate_input-text {
+    font-size: 18px;
+    text-align: left;
+}
 
+.downUpdate_inputButton-block {
+    display: flex;
+    justify-content: left;
+    flex-wrap: wrap;
+}
 
+.downUpdate_input {
+    border: none;
+    border-bottom: 1px solid #a0a0a0;
+    padding-bottom: 16px;
+    margin-right: 37px;
+}
 
+.downUpdate_button-submit {
+    width: 100px;
+    height: 38px;
+    background: none;
+    border: 2px solid #5d5d5d;
+    padding: 4px 8px;
+}
 
+.downUpdate_img {
+    margin-top: 78px;
+    width: 800px;
+    height: 380px;
+}
 
+.auth_title {
+    font-size: 47px;
+    color: white;
+}
 
+.auth_content {
+    display: grid;
+    grid-template-columns: 372px 231px 170px;
+    grid-gap: 100px;
+}
 
+.form_content {
+    display: grid;
+    margin: 0 8px;
+}
 
+.auth_input {
+    border: none;
+    border-bottom: 1px solid white;
+    padding-bottom: 21px;
+    background: none;
+    margin-top: 35px;
+}
+
+.auth_input::placeholder {
+    color: white;
+}
+
+.auth_button {
+    width: 100px;
+    height: 38px;
+    background: none;
+    border: 2px solid white;
+    padding: 4px 8px;
+    margin-top: 24px;
+    color: white;
+}
+
+.support_content {
+    display: grid;
+    justify-content: center;
+}
+
+.support_block {
+    margin-bottom: 39px;
+}
+
+.support_icon {
+    max-width: 35px;
+    max-height: 35px;
+}
+
+.support_text {
+    font-size: 18px;
+    color: white;
+    margin: 34px 0 0;
+}
+
+.support_text-second {
+    font-size: 18px;
+    color: white;
+    margin-top: 19px;
+}
+
+.chat_title {
+    font-size: 30px;
+    color: white;
+    margin: 0;
+}
+
+.chat_img {
+    max-width: 170px;
+    max-height: 170px;
+    margin-top: 51px;
+}
+
+.chat_text {
+    margin: 38px 0 0;
+    font-size: 18px;
+    color: white;
+}
+
+.green_block {
+    background-color: #05d10f;
+    border-radius: 24px;
+    padding: 4px 8px;
+    margin: 14px auto 0;
+    font-size: 12px;
+    color: white;
+    width: 85px;
+    height: 23px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.chat_button {
+    width: 151px;
+    height: 39px;
+    padding: 4px 8px;
+    background: none;
+    border: 2px solid white;
+    font-size: 15px;
+    color: white;
+    margin-top: 35px;
+}
+
+.footer_logo {
+    width: 120px;
+}
+
+.footer_icons-block {
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    margin-top: 55px;
+}
+
+.icon_footer {
+    /* width: 25px;
+    height: 25px; */
+    margin: 0 35px;
+}
+
+.footer_text {
+    font-size: 15px;
+    margin-top: 58px;
+}
 
 @media (max-width: 1200px) {
     .choos_content {
@@ -321,6 +566,10 @@
         margin-bottom: 30px;
         justify-self: center;
     }
+
+    .downUpdate_input-block {
+        margin-top: 24px;
+    }
 }
 
 @media screen and (max-width: 1050px) {
@@ -333,7 +582,53 @@
     }
 }
 
+@media screen and (max-width: 1000px) {
+    .auth_content {
+        display: block;
+    }
+
+    .slider {
+        width: 600px;
+    }
+}
+
 @media screen and (max-width: 862px) {
+    .hamburger-menu {
+        display: grid;
+        justify-content: right;
+    }
+
+    .header_content {
+        align-items: baseline;
+        padding: 0 8px;
+    }
+
+    .burger_menu li {
+        margin: 16px 0;
+    }
+
+    .header_text {
+        margin-right: 0;
+    }
+
+    .hamburger {
+        margin: 0 0 auto 0;
+    }
+
+    .burger_menu {
+        text-align: right;
+    }
+
+    li {
+        list-style: none;
+    }
+
+    .menu_link {
+        display: none;
+        /* Скрыть обычное меню */
+        /* Добавьте стили для бургер-меню (иконки, расположение и т.д.) */
+    }
+
     .about_content {
         justify-content: center;
     }
@@ -355,9 +650,40 @@
         padding: 12px 30px;
         margin: 12px;
     }
+
+    .video_img {
+        width: 440px;
+        height: 320px;
+    }
+
+    .downUpdate_button-block {
+        justify-content: center;
+        margin-right: 0;
+    }
+
+    .downUpdate_img {
+        margin-top: 78px;
+        width: 490px;
+        height: 220px;
+    }
+}
+
+@media screen and (max-width: 700px) {
+    .slider {
+        flex: 0 0 300px;
+    }
 }
 
 @media screen and (max-width: 500px) {
+    
+    .slide {
+        flex: 0 0 300px;
+    }
+
+    .prevBtn, .nextBtn {
+        display: none;
+    }
+
     .about_title {
         font-size: 40px;
         padding: 0 8px;
@@ -370,15 +696,52 @@
     .about_img {
         height: 600px;
     }
-
+  
     .features_img-phones {
         width: 280px;
         height: 280px;
+    }
+
+    .video_img {
+        width: 280px;
+        height: 220px;
+    }
+
+    .downUpdate_img {
+        margin-top: 78px;
+        width: 290px;
+        height: 160px;
+    }
+
+    .downUpdate_button {
+        margin: 8px;
+    }
+
+    .downUpdate_inputButton-block {
+        justify-content: center;
+    }
+
+    .downUpdate_input-text {
+        text-align: center;
+    }
+
+    .footer_icons-block {
+        display: grid;
+        grid-gap: 25px;
     }
 }
 
 @media screen and (max-width: 350px) {
     .about_img {
         margin-top: 200px;
+    }
+
+    .downUpdate_img {
+        margin-top: 40px;
+    }
+
+    .downUpdate_input {
+        margin-right: 0;
+        margin-bottom: 24px;
     }
 }
