--- a/styles/style.css
+++ b/styles/style.css
@@ -340,6 +340,7 @@ body {
     width: 770px;
     height: 440px;
     padding: 0 8px;
+    cursor: pointer;
 }
 
 .downUpdate {
@@ -372,6 +373,7 @@ body {
     font-size: 18px;
     display: grid;
     justify-content: center;
+    cursor: pointer;
 }
 
 .downUpdate_button:nth-child(1) {
@@ -414,9 +416,13 @@ body {
 .downUpdate_input {
     border: none;
     border-bottom: 1px solid #a0a0a0;
-    padding-bottom: 16px;
     margin-right: 37px;
+    padding-top: 12px;
 }
+
+.downUpdate_input:focus::placeholder { 
+    transform: translateY(-16px); /* Сдвигаем вверх */
+  }
 
 .downUpdate_button-submit {
     width: 100px;
@@ -424,6 +430,8 @@ body {
     background: none;
     border: 2px solid #5d5d5d;
     padding: 4px 8px;
+    margin: 0 8px;
+    cursor: pointer;
 }
 
 .downUpdate_img {
@@ -451,10 +459,14 @@ body {
 .auth_input {
     border: none;
     border-bottom: 1px solid white;
-    padding-bottom: 21px;
     background: none;
     margin-top: 35px;
+    color: white;
 }
+
+.auth_input:focus::placeholder { 
+    transform: translateY(-21px); /* Сдвигаем вверх */
+  }
 
 .auth_input::placeholder {
     color: white;
@@ -468,6 +480,7 @@ body {
     padding: 4px 8px;
     margin-top: 24px;
     color: white;
+    cursor: pointer;
 }
 
 .support_content {
@@ -537,6 +550,7 @@ body {
     font-size: 15px;
     color: white;
     margin-top: 35px;
+    cursor: pointer;
 }
 
 .footer_logo {
