--- a/styles/style.css
+++ b/styles/style.css
@@ -102,6 +102,7 @@ body {
     margin: 0 auto;
     margin-top: 80px;
     color: white;
+    cursor: pointer;
 }
 
 .main {
@@ -297,7 +298,8 @@ body {
     justify-content: center;
 }
 
-.prevBtn, .nextBtn {
+.prevBtn,
+.nextBtn {
     border: 1px solid #0983d1;
     padding: 5px;
     width: 72px;
@@ -420,9 +422,10 @@ body {
     padding-top: 12px;
 }
 
-.downUpdate_input:focus::placeholder { 
-    transform: translateY(-16px); /* Сдвигаем вверх */
-  }
+.downUpdate_input:focus::placeholder {
+    transform: translateY(-16px);
+    /* Сдвигаем вверх */
+}
 
 .downUpdate_button-submit {
     width: 100px;
@@ -464,9 +467,10 @@ body {
     color: white;
 }
 
-.auth_input:focus::placeholder { 
-    transform: translateY(-21px); /* Сдвигаем вверх */
-  }
+.auth_input:focus::placeholder {
+    transform: translateY(-21px);
+    /* Сдвигаем вверх */
+}
 
 .auth_input::placeholder {
     color: white;
@@ -602,7 +606,7 @@ body {
     .downUpdate_input-block {
         margin-top: 24px;
     }
-    
+
     .slider_content {
         grid-template-columns: 80px 600px 80px;
     }
@@ -649,6 +653,7 @@ body {
 
     .burger_menu li {
         margin: 16px 0;
+        padding-right: 16px;
     }
 
     .header_text {
@@ -661,6 +666,10 @@ body {
 
     .burger_menu {
         text-align: right;
+        background-color: #363636;
+        position: absolute;
+        right: 0;
+        transition: transform 5s;
     }
 
     li {
